Revised Trish Code

--- a/washington_vehicle_data.ipynb
+++ b/washington_vehicle_data.ipynb
@@ -259,6 +259,16 @@
     "close_df[\"Postal Code\"] = close_df[\"Postal Code\"].astype(int)\n",
     "close_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_df = close_df\n",
+    "clean_df.to_csv(\"clean_car_data.csv\")"
+   ]
   }
  ],
  "metadata": {
